--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,24 @@
 [project]
-name = "tar_assistant"
+name = "assistant"
 version = "0.1.0"
 description = ""
 authors = [
     {name = "beatoven9",email = "reeedt@gmail.com"}
 ]
 packages = [
-    {include = "tar_assistant"}
+    {include = "assistant"}
 ]
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
     "ollama (>=0.4.5,<0.5.0)",
-    "llama-index (>=0.12.9,<0.13.0)"
+    "llama-index (>=0.12.9,<0.13.0)",
+    "prompt-toolkit (>=3.0.48,<4.0.0)"
 ]
+
+[tool.poetry.scripts]
+sys_admin_assistant = "assistant.main:main"
+
 
 
 [build-system]
