--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "ollama (>=0.4.5,<0.5.0)",
     "llama-index (>=0.12.9,<0.13.0)",
-    "prompt-toolkit (>=3.0.48,<4.0.0)"
+    "prompt-toolkit (>=3.0.48,<4.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 [tool.poetry.scripts]
