--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "ollama (>=0.4.5,<0.5.0)",
     "llama-index (>=0.12.9,<0.13.0)",
     "prompt-toolkit (>=3.0.48,<4.0.0)",
-    "pyyaml (>=6.0.2,<7.0.0)"
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "jsonschema (>=4.23.0,<5.0.0)"
 ]
 
 [tool.poetry.scripts]
