--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "prompt-toolkit (>=3.0.48,<4.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
     "jsonschema (>=4.23.0,<5.0.0)",
-    "pymupdf4llm (>=0.0.17,<0.0.18)"
+    "pymupdf4llm (>=0.0.17,<0.0.18)",
+    "sentence-transformers (>=3.4.1,<4.0.0)",
+    "qdrant-client (>=1.13.2,<2.0.0)"
 ]
 
 [tool.poetry.scripts]
