--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
+    "redis (>=5.2.1,<6.0.0)",
 ]
 
 [tool.poetry.scripts]
