Added user_add, user_update, user_delete, and curl tests for each.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "sentence-transformers (>=3.4.1,<4.0.0)",
     "qdrant-client (>=1.13.2,<2.0.0)",
     "pypandoc-binary (>=1.15,<2.0)",
-    "pydantic (>=2.10.6,<3.0.0)",
+    "pydantic[email] (>=2.10.6,<3.0.0)",
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "redis (>=5.2.1,<6.0.0)",
