--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,14 @@ dependencies = [
     "qdrant-client (>=1.13.2,<2.0.0)",
     "pypandoc-binary (>=1.15,<2.0)",
     "pydantic[email] (>=2.10.6,<3.0.0)",
-    "fastapi (>=0.115.8,<0.116.0)",
+    "fastapi[all] (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "redis (>=5.2.1,<6.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "motor (>=3.7.0,<4.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
 ]
 
 [tool.poetry.scripts]
