--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,9 +23,10 @@ dependencies = [
     "redis (>=5.2.1,<6.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "motor (>=3.7.0,<4.0.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "python-jose[cryptography] (>=3.3.0,<4.0.0)",
+    "bcrypt (>=4.2.1,<5.0.0)",
 ]
 
 [tool.poetry.scripts]
