--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,10 @@ offle_assistant_cli = "offle_assistant.cli._cli:main"
 
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-asyncio = "^0.25.3"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
