--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "python-jose[cryptography] (>=3.3.0,<4.0.0)",
     "bcrypt (>=4.2.1,<5.0.0)",
+    "appdirs (>=1.4.4,<2.0.0)",
 ]
 
 [tool.poetry.scripts]
