--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "python-jose[cryptography] (>=3.3.0,<4.0.0)",
     "bcrypt (>=4.2.1,<5.0.0)",
     "appdirs (>=1.4.4,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
 ]
 
 [tool.poetry.scripts]
